--- a/firsr-app-github/src/index.css
+++ b/firsr-app-github/src/index.css
@@ -1,6 +1,9 @@
 body {
-  margin: 0;
-  padding: 0;
+  background-color: black;
 }
 
-
+.active {
+  color: red !important;
+  -webkit-text-decoration-line: underline;
+          text-decoration-line: underline;
+}/*# sourceMappingURL=index.css.map */
