--- a/project_empty/src/styles/_helper.scss
+++ b/project_empty/src/styles/_helper.scss
@@ -6,5 +6,9 @@
 
 body {
   font-family: "DM Sans", sans-serif;
-  background: #fcfcfd;
+
+}
+@function toRem($value) {
+  $remValue: ($value / 16) + rem;
+  @return $remValue;
 }
