--- a/project_empty/src/styles/global.css
+++ b/project_empty/src/styles/global.css
@@ -6,5 +6,4 @@
 
 body {
   font-family: "DM Sans", sans-serif;
-  background: #fcfcfd;
-}/*# sourceMappingURL=Navbar.module.css.map */
+}/*# sourceMappingURL=global.css.map */
