--- a/project_empty/src/layout/Navbar/Navbar.css
+++ b/project_empty/src/layout/Navbar/Navbar.css
@@ -8,6 +8,13 @@ body {
   font-family: "DM Sans", sans-serif;
 }
 
+input[type=search]::-webkit-search-decoration,
+input[type=search]::-webkit-search-cancel-button,
+input[type=search]::-webkit-search-results-button,
+input[type=search]::-webkit-search-results-decoration {
+  -webkit-appearance: none;
+}
+
 a {
   color: #c0c4cf !important;
   text-decoration: none !important;
@@ -54,7 +61,7 @@ a {
 }
 
 .form-control {
-  width: 16rem !important;
+  width: 13.5rem !important;
   height: 2.5rem !important;
   border-radius: 0.5rem !important;
   border: 2px solid #e6e8ec !important;
@@ -146,7 +153,7 @@ a {
 
   .form-control {
     display: block !important;
-    width: 13.5rem !important;
+    width: 25 6/16rem !important;
     height: 2.5rem !important;
   }
 
