--- a/project_empty/src/layout/Navbar/Navbar.scss
+++ b/project_empty/src/layout/Navbar/Navbar.scss
@@ -5,6 +5,12 @@
   text-align: center;
   justify-content: center;
 }
+input[type="search"]::-webkit-search-decoration,
+input[type="search"]::-webkit-search-cancel-button,
+input[type="search"]::-webkit-search-results-button,
+input[type="search"]::-webkit-search-results-decoration {
+  -webkit-appearance: none;
+}
 a {
   color: #c0c4cf !important;
   text-decoration: none !important;
@@ -47,7 +53,7 @@ a {
 }
 
 .form-control {
-  width: toRem(256) !important;
+  width: toRem(216) !important;
   height: toRem(40) !important;
   border-radius: 0.5rem !important;
   border: 2px solid #e6e8ec !important;
@@ -127,7 +133,7 @@ a {
   }
   .form-control {
     display: block !important ;
-    width: toRem(216) !important;
+    width: toRem(25 6) !important;
     height: toRem(40) !important;
   }
   .notification {
