--- a/project_empty/src/styles/global.scss
+++ b/project_empty/src/styles/global.scss
@@ -3,21 +3,22 @@ $colorBlue: #3772ff;
 $colorGreen: #45b26b;
 $colorViolet: #9757d7;
 $colorPink: #ef466f;
-$colorGrey : #E6E8EC;
+$colorGrey: #e6e8ec;
 
-@mixin btns ($wdth, $hght, $brdr, $brdr-rds,$bckgr,$clr) {
-    width: $wdth;
-    height: $hght;
-    border: $brdr;
-    border-radius: $brdr-rds;
-    background-color: $bckgr;
-    color: $clr;
+@mixin btns($wdth, $hght, $brdr, $brdr-rds, $bckgr, $clr) {
+  width: $wdth;
+  height: $hght;
+  border: $brdr;
+  border-radius: $brdr-rds;
+  background-color: $bckgr;
+  color: $clr;
 }
-@mixin text ($wdth, $hght,$fw,$fs, $lg, $clr) {
-    width: $wdth;
-    height: $hght;
-    font-weight: $fw;
-    font-size: $fs;
-    line-height: $lg;
-    color: $clr;
+@mixin text($wdth, $hght, $fw, $fs, $lg, $clr) {
+  width: $wdth;
+  height: $hght;
+  font-weight: $fw;
+  font-size: $fs;
+  line-height: $lg;
+  color: $clr;
 }
+
