--- a/project_empty/src/components/OnSale/ImgSale/ImgSale.scss
+++ b/project_empty/src/components/OnSale/ImgSale/ImgSale.scss
@@ -17,7 +17,7 @@
   justify-items: center;
   margin-top: 1.5rem;
 }
-.logo {
+.logos {
   width: toRem(30);
   height: toRem(30);
   border-radius: toRem(48);
@@ -49,4 +49,7 @@
 }
 .fatherRow:nth-child(2 ){
   padding-top: 1rem;
+}
+.fatherRow{
+margin-left: 1px !important;
 }
