--- a/project_empty/src/components/OnSale/OnSale/OnSale.scss
+++ b/project_empty/src/components/OnSale/OnSale/OnSale.scss
@@ -5,7 +5,6 @@
 }
 .eyes {
   width: 100%;
-  //   width: toRem(462.52);
   height: toRem(446);
   border-radius: 12px;
 }
@@ -46,6 +45,29 @@
       align-items: center;
       justify-content: center;
       margin-top: 1rem;
+    }
+  }
+}
+.salers-title {
+  @include text(toRem(232), toRem(20), 600, 1rem, toRem(20), #777e91);
+}
+.discover-btn {
+  margin-top: 2rem;
+  @include btns(
+    toRem(158),
+    toRem(40),
+    2px solid #e6e8ec,
+    toRem(90),
+    #fff,
+    #23262f
+  );
+  p {
+    margin-bottom: unset;
+    font-weight: 700;
+    font-size: 14px;
+    line-height: 16px;
+    span{
+      margin-left: 1rem;
     }
   }
 }
