--- a/project_empty/src/layout/Navbar/Navbar.scss
+++ b/project_empty/src/layout/Navbar/Navbar.scss
@@ -116,7 +116,7 @@ a {
     margin-bottom: 0.5rem;
   }
   .logo {
-    margin-left: -50px;
+    margin-left: -32%;
   }
   .crypto {
     left: 3.1rem;
