--- a/project_empty/src/components/OnSale/OnSale/OnSale.css
+++ b/project_empty/src/components/OnSale/OnSale/OnSale.css
@@ -98,4 +98,29 @@ body {
 }
 .discover-btn p span {
   margin-left: 1rem;
+}
+
+@media screen and (max-width: 500px) {
+  body {
+    height: 500vh;
+  }
+
+  .row-2 {
+    margin-top: 2rem;
+  }
+
+  .salers-title {
+    display: block;
+    margin: 2.5rem 23%;
+    padding: unset;
+  }
+
+  .section-salers {
+    padding-left: 23%;
+  }
+
+  .discover-btn {
+    margin: 0 auto;
+    display: block;
+  }
 }/*# sourceMappingURL=OnSale.css.map */
