--- a/project_empty/src/components/OnSale/OnSale/OnSale.scss
+++ b/project_empty/src/components/OnSale/OnSale/OnSale.scss
@@ -66,8 +66,29 @@
     font-weight: 700;
     font-size: 14px;
     line-height: 16px;
-    span{
+    span {
       margin-left: 1rem;
     }
+  }
+}
+
+@media screen and (max-width: 500px) {
+  body {
+    height: 500vh;
+  }
+  .row-2 {
+    margin-top: 2rem;
+  }
+  .salers-title {
+    display: block;
+    margin: 2.5rem 23%;
+    padding: unset;
+  }
+  .section-salers {
+    padding-left: 23%;
+  }
+  .discover-btn {
+    margin: 0 auto  ;
+    display: block;
   }
 }
