--- a/project_empty/src/components/OnSale/ImgSale/ImgSale.scss
+++ b/project_empty/src/components/OnSale/ImgSale/ImgSale.scss
@@ -44,6 +44,10 @@
     @include text(toRem(74), 1rem, 700, 14px, 1rem, #23262f);
   }
 }
+.fatherRow2:hover {
+  transition: transform 0.1s;
+  transform: scale(1.1);
+}
 .fatherRow2:nth-child(3) {
   padding-top: 1rem;
 }
@@ -68,5 +72,8 @@
     width: 14.8rem !important;
     margin-left: -9px;
   }
- 
+  .fatherRow2:hover {
+    transition: transform 0.1s;
+    transform: scale(1.1);
+  }
 }
