--- a/project_empty/src/components/OnBit/OnBit/OnBit.css
+++ b/project_empty/src/components/OnBit/OnBit/OnBit.css
@@ -10,4 +10,99 @@ body {
 
 .carousel-mobile {
   display: none;
+}
+
+.onBitLine {
+  margin-top: 1rem;
+  width: 100%;
+  border: 1px solid #e6e8ec;
+  margin-bottom: 2rem;
+}
+
+.onbit_footer {
+  display: flex;
+  justify-content: center;
+  align-items: flex-start;
+}
+
+.onbit_title {
+  width: 15.625rem;
+  height: 3rem;
+  font-weight: 700;
+  font-size: 2.5rem;
+  line-height: 3rem;
+  color: #23262f;
+  margin-top: 8.5rem;
+  margin-bottom: 2.8125rem;
+}
+
+.section_hotBid img {
+  border-radius: 12px;
+}
+
+.title_of_nft {
+  margin-top: 1rem;
+}
+.title_of_nft h5 {
+  width: 11.5rem;
+  height: 1.5rem;
+  font-weight: 500;
+  font-size: 1rem;
+  line-height: 1.5rem;
+  color: #23262f;
+}
+.title_of_nft span {
+  border: 2px solid #45b36b;
+  border-radius: 4px;
+  width: 4.875rem;
+  height: 1.625rem;
+  font-weight: 700;
+  font-size: 15px;
+  line-height: 12px;
+  color: #45b36b;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.followers span {
+  width: 4.125rem;
+  height: 1.5rem;
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 14px;
+  color: #353945;
+  margin-left: 12px;
+}
+
+.onbit_footer p {
+  width: 15.625rem;
+  height: 1.25rem;
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 1.25rem;
+  color: #777e91;
+}
+.onbit_footer p span {
+  color: #353945;
+  width: 3.5rem;
+  height: 1.25rem;
+  font-weight: 600;
+  font-size: 12px;
+  line-height: 1.25rem;
+  color: #353945;
+  padding-left: 1.5rem;
+}
+.onbit_footer p span span {
+  width: 3.5rem;
+  height: 1.25rem;
+  font-weight: 600;
+  font-size: 12px;
+  line-height: 1.25rem;
+  color: #777e91;
+}
+
+.imgHover:hover {
+  transform: scale(0.9);
+  transition: all 1s ease;
 }/*# sourceMappingURL=OnBit.css.map */
