--- a/project_empty/src/components/OnBit/OnBit/OnBit.css
+++ b/project_empty/src/components/OnBit/OnBit/OnBit.css
@@ -64,6 +64,9 @@ body {
   align-items: center;
   justify-content: center;
 }
+.title_of_nft span:hover {
+  background-color: #353945;
+}
 
 .followers span {
   width: 4.125rem;
