--- a/project_empty/src/components/OnBit/OnBit/OnBit.scss
+++ b/project_empty/src/components/OnBit/OnBit/OnBit.scss
@@ -37,6 +37,9 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    &:hover {
+        background-color: #353945;
+    }
   }
 }
 .followers {
