--- a/project_empty/src/components/OnBit/OnBit/OnBit.css
+++ b/project_empty/src/components/OnBit/OnBit/OnBit.css
@@ -5,7 +5,7 @@
 }
 
 body {
-  font-family: "DM Sans", sans-serif;
+  font-family: "DM Sans", sans-serif !important;
 }
 
 .carousel-mobile {
@@ -108,6 +108,16 @@ body {
 .imgHover:hover {
   transform: scale(0.9);
   transition: all 1s ease;
+}
+
+.btn-load {
+  width: 8.25rem !important;
+  height: 2.5rem !important;
+  border: 1px solid #e6e8ec;
+  border-radius: 5.625rem;
+  background-color: #fff;
+  color: #23262f;
+  margin-left: 35.875rem;
 }
 
 @media screen and (max-width: 500px) {
