--- a/project_empty/src/components/OnBit/OnBitText/OnBitText.css
+++ b/project_empty/src/components/OnBit/OnBitText/OnBitText.css
@@ -5,5 +5,5 @@
 }
 
 body {
-  font-family: "DM Sans", sans-serif;
+  font-family: "DM Sans", sans-serif !important;
 }/*# sourceMappingURL=OnBitText.css.map */
