--- a/portfolio_origin/src/style/global.scss
+++ b/portfolio_origin/src/style/global.scss
@@ -36,6 +36,7 @@ $colorWhite: #ffffff;
 $colorGray: #7b7b7b;
 $colorLightGray: #d4d4d4;
 $colorDarkBlue: #212529;
+// backdrop-filter: blur(4px);
 body {
   background-color: $colorDarkBlue !important;
   color: #fff !important;
