--- a/portfolio_origin/src/components/block/block.css
+++ b/portfolio_origin/src/components/block/block.css
@@ -24,8 +24,13 @@ body {
   border-radius: 10px;
   padding: 1.75rem 1.875rem;
   display: flex;
-  justify-content: space-between;
+  align-items: center;
+  text-align: center;
+  justify-content: center;
+  justify-items: center;
+  justify-content: space-between !important;
   box-shadow: 4px 4px 3px 2px rgba(0, 0, 0, 0.2);
+  height: 7.5rem !important;
 }
 
 .block_text {
