--- a/portfolio_origin/src/style/global.css
+++ b/portfolio_origin/src/style/global.css
@@ -10,4 +10,5 @@ body {
   color: #fff !important;
   height: 500vh;
   font-family: "Inter", sans-serif !important;
+  position: relative;
 }/*# sourceMappingURL=global.css.map */
