--- a/portfolio_origin/src/components/block/block.css
+++ b/portfolio_origin/src/components/block/block.css
@@ -32,7 +32,46 @@ body {
   box-shadow: 4px 4px 3px 2px rgba(0, 0, 0, 0.2);
   height: 7.5rem !important;
 }
+.block:hover {
+  transform: scale(1.05);
+  overflow: hidden;
+  transform-origin: 0 1;
+  transition: transform 0.25s, visibility 0.25s ease-in;
+}
 
 .block_text {
   display: inline-block;
+}
+
+@media screen and (max-width: 500px) {
+  .block {
+    display: block;
+    padding: 8px;
+  }
+
+  .complete_icon {
+    width: 2.9375rem;
+    height: 2.9375rem;
+    display: block;
+    margin: 0 auto;
+  }
+
+  .block_3 {
+    margin: auto;
+    margin-top: 5% !important;
+    display: block;
+  }
+
+  .icon_right {
+    display: none;
+  }
+
+  .block_text h1 {
+    color: #ffb742;
+    margin-left: 11px;
+  }
+
+  .block_text h5 {
+    font-size: 14px;
+  }
 }/*# sourceMappingURL=block.css.map */
