--- a/portfolio_origin/src/layout/navbar/Navbar.css
+++ b/portfolio_origin/src/layout/navbar/Navbar.css
@@ -13,10 +13,6 @@ body {
   position: relative;
 }
 
-.navbar_first_child {
-  margin-left: 29.25rem !important;
-}
-
 .nav-link {
   color: #ffffff !important;
   margin-left: 1.5625rem;
@@ -27,6 +23,10 @@ body {
   color: #ffb742 !important;
 }
 
+.navbar-collapse {
+  justify-content: space-evenly;
+}
+
 .btn-yellow {
   width: auto;
   height: auto;
@@ -35,6 +35,7 @@ body {
   background-color: #ffb742;
   color: #212529 !important;
   padding: 12px 26px !important;
+  margin-left: auto;
 }
 .btn-yellow:hover {
   background-color: transparent;
@@ -54,6 +55,11 @@ body {
 .btn-yellow p:hover {
   color: #ffb742 !important;
   transition: 2s;
+}
+
+.navbarHeader {
+  display: flex;
+  justify-content: space-between;
 }
 
 @media screen and (max-width: 500px) {
