--- a/portfolio_origin/src/components/entering/entering.css
+++ b/portfolio_origin/src/components/entering/entering.css
@@ -10,6 +10,7 @@ body {
   color: #fff !important;
   height: 500vh;
   font-family: "Inter", sans-serif !important;
+  position: relative;
 }
 
 .entering {
