--- a/portfolio_origin/src/components/skills/skills.scss
+++ b/portfolio_origin/src/components/skills/skills.scss
@@ -1,9 +1,18 @@
 @import "../../style/global.scss";
+.skills_row {
+    margin-top: toRem(180);
+}
+.skills_txt {
+  @include text(toRem(518), toRem(111), 700, toRem(46), toRem(56), $colorWhite);
+}
+.skills_parag {
+  @include text(toRem(592), toRem(60), 400, 1rem, toRem(30), $colorWhite);
+}
 .skills_btn {
   width: 7.5rem !important;
 }
 .skills_position {
-    justify-content: space-between;
+  justify-content: space-between;
 }
 .skills_row img {
   width: toRem(80);
@@ -11,7 +20,7 @@
   object-fit: contain;
 }
 .skills_background {
-    width: toRem(100) !important;
+  width: toRem(100) !important;
   height: toRem(100) !important;
   background: #383e45;
   border-radius: 10px;
