--- a/portfolio_origin/src/components/skills/skills.css
+++ b/portfolio_origin/src/components/skills/skills.css
@@ -13,6 +13,28 @@ body {
   position: relative;
 }
 
+.skills_row {
+  margin-top: 11.25rem;
+}
+
+.skills_txt {
+  width: 32.375rem;
+  height: 6.9375rem;
+  font-weight: 700;
+  font-size: 2.875rem;
+  line-height: 3.5rem;
+  color: #ffffff;
+}
+
+.skills_parag {
+  width: 37rem;
+  height: 3.75rem;
+  font-weight: 400;
+  font-size: 1rem;
+  line-height: 1.875rem;
+  color: #ffffff;
+}
+
 .skills_btn {
   width: 7.5rem !important;
 }
