--- a/portfolio_origin/src/components/entering/entering.css
+++ b/portfolio_origin/src/components/entering/entering.css
@@ -115,4 +115,8 @@ body {
   .avatar {
     margin-top: 14% !important;
   }
+
+  .works {
+    padding: 10px;
+  }
 }/*# sourceMappingURL=entering.css.map */
