--- a/portfolio_origin/src/components/skills/skills.scss
+++ b/portfolio_origin/src/components/skills/skills.scss
@@ -40,6 +40,7 @@
     width: 89%;
     text-align: center;
     margin: auto;
+    height: toRem(124);
   }
   .skills_background {
     width: 80px !important;
