--- a/portfolio_origin/src/layout/navbar/Navbar.css
+++ b/portfolio_origin/src/layout/navbar/Navbar.css
@@ -27,6 +27,49 @@ body {
   justify-content: space-evenly;
 }
 
+.navMenu {
+  border: none !important;
+}
+
+.navMenu > span {
+  display: block;
+  width: 1.875rem;
+  height: 4px;
+  border-radius: 624.9375rem;
+  background-color: #ffb742;
+}
+
+.navMenu > span:not(:last-child) {
+  margin-bottom: 7px;
+}
+
+.navMenu,
+.navMenu > span {
+  transition: all 0.4s ease-in-out;
+}
+
+.navMenu.active {
+  transition-delay: 0.8s;
+  transform: rotate(45deg);
+}
+
+.navMenu.active > span:nth-child(2) {
+  width: 0;
+}
+
+.navMenu.active > span:nth-child(1),
+.navMenu.active > span:nth-child(3) {
+  transition-delay: 0.4s;
+}
+
+.navMenu.active > span:nth-child(1) {
+  transform: translateY(9px);
+}
+
+.navMenu.active > span:nth-child(3) {
+  transform: translateY(-13px) rotate(90deg);
+}
+
 .btn-yellow {
   width: auto;
   height: auto;
