--- a/portfolio_origin/src/layout/navbar/Navbar.scss
+++ b/portfolio_origin/src/layout/navbar/Navbar.scss
@@ -11,6 +11,41 @@
 .navbar-collapse {
   justify-content: space-evenly;
 }
+
+.navMenu {
+  border: none !important;
+}
+.navMenu > span {
+  display: block;
+  width: toRem(30);
+  height: 4px;
+  border-radius: toRem(9999);
+  background-color: $colorYellow
+}
+.navMenu > span:not(:last-child) {
+  margin-bottom: 7px;
+}
+.navMenu,
+.navMenu > span {
+  transition: all 0.4s ease-in-out;
+}
+.navMenu.active {
+  transition-delay: 0.8s;
+  transform: rotate(45deg);
+}
+.navMenu.active > span:nth-child(2) {
+  width: 0;
+}
+.navMenu.active > span:nth-child(1),
+.navMenu.active > span:nth-child(3) {
+  transition-delay: 0.4s;
+}
+.navMenu.active > span:nth-child(1) {
+  transform: translateY(9px);
+}
+.navMenu.active > span:nth-child(3) {
+  transform: translateY(-13px) rotate(90deg);
+}
 .btn-yellow {
   @include btns(
     auto,
