--- a/portfolio_origin/src/components/portfolio/portfolio.css
+++ b/portfolio_origin/src/components/portfolio/portfolio.css
@@ -8,7 +8,30 @@
 body {
   background-color: #212529 !important;
   color: #fff !important;
-  height: 500vh;
+  height: 700vh;
   font-family: "Inter", sans-serif !important;
   position: relative;
+}
+
+.card {
+  border: 2px solid red !important;
+  background-color: transparent !important;
+  height: auto;
+}
+
+.card:nth-child(2) {
+  height: 15rem;
+}
+
+.card-body {
+  padding: unset !important;
+}
+
+.portfolio img {
+  -o-object-fit: contain;
+     object-fit: contain;
+  height: auto !important;
+}
+.portfolio img:hover {
+  transform: scale(-50px);
 }/*# sourceMappingURL=portfolio.css.map */
